# feedforward_network

./: Activasion.cpp  Activasion.h  Activation.h  CMakeLists.txt  EuclideanLoss.cpp  EuclideanLoss.h  FeedForwardNet.cpp  FeedForwardNet.h  FullyConnectedLayer.cpp  FullyConnectedLayer.h  InputLayer.cpp  InputLayer.h  LearningRatePolicy.h  MultiplyGate.cpp  MultiplyGate.h  Neuron.cpp  Neuron.h  Sigmoid.cpp  Sigmoid.h  StepDownPolicy.cpp  StepDownPolicy.h  Tanh.cpp  Tanh.h  imageProcessing.cpp  imageProcessing.h  main.cpp  plot_loss.py  test.cpp
